--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,36 +1,30 @@
-name: Publish Package
+name: Publish to PyPI
 
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - "v*.*.*"
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Check out repository
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.12.11'
+          python-version: "3.12.11"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+      - name: Install build tool
+        run: pip install build
 
       - name: Build package
-        run: |
-          python setup.py sdist bdist_wheel
+        run: python -m build
 
-      - name: Publish package to PyPI
-        env:
-          TWINE_PASSWORD: ${{ secrets.PIP_TOKEN_XTRACER }}
-          TWINE_NO_KEYRING: true
-        run: |
-          pip install twine
-          twine upload dist/*
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@v1
+        with:
+          password: ${{ secrets.PIP_TOKEN_XTRACER }}
